--- a/style.css
+++ b/style.css
@@ -60,3 +60,25 @@ button {
 	background-color: rgb(155, 155, 155);
 	padding: 5px;
 }
+
+.draggable {
+	border: 2px solid rgb(155, 155, 155);
+	padding: 2%;
+	margin: 3px 5px;
+}
+
+.draggable p {
+	float: left;
+	width: 60%;
+	font-size: 18px;
+	text-align: center;
+}
+
+.edit-btn {
+	float: left;
+	width: 15%;
+}
+
+.delete-btn {
+	width: 15%;
+}
